alignment fixed

--- a/src/index.css
+++ b/src/index.css
@@ -1278,7 +1278,7 @@ img {
 /* about - end */
 /* live-course - start */
 .live_courses_sec .card_parent {
-    border: 1px solid #b8b8b8;
+    /* border: 1px solid #b8b8b8; */
     /* box-shadow: 0px 2.03px 4.07px 0px #00000040; */
     border-radius: 20px;
     position: relative;
@@ -1347,8 +1347,8 @@ img {
     background: #fdfdfd;
     border-radius: 20px 0 0;
     /* box-shadow: inset 2px 0 4px #00000040, inset 0 2px 4px #00000040, inset 0 2px 4px #00000000, inset 0 2px 4px #00000000; */
-    border-top: 1px solid #b8b8b8;
-    border-left: 1px solid #b8b8b8;
+    /* border-top: 1px solid #b8b8b8; */
+    /* border-left: 1px solid #b8b8b8; */
 }
 
 .card_button_parent button {
